[project]
name = "comfyui-create-ultra-hdr"
description = "Convert sRGB images to Ultra HDR JPEG (ISO 21496-1)"
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = [
    "scipy>=1.9.0",
    "numpy>=1.23.0",
    "pillow>=9.0.0"
]

[project.urls]
Repository = "https://github.com/overcloud81/ComfyUI-Create-UltraHDR"

[tool.comfy]
PublisherId = "overcloud81"
DisplayName = "Create Ultra HDR Image"
Icon = "https://example.com/icon.png"  # 可选，建议提供一个图标的 URL
